--- a/glide/build.gradle
+++ b/glide/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'com.android.library'
 
 apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
+
+version = rootProject.ext.android.versionName
+group = rootProject.ext.jcenter.groupId
+
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
     buildToolsVersion rootProject.ext.android.buildToolsVersion
