--- a/config.gradle
+++ b/config.gradle
@@ -14,14 +14,14 @@ ext {
     jcenter =
             [
                     //项目名称
-                    name       : "glide-support",
+                    name       : "GlidePlus",
                     groupId    : "com.dyhdyh.support",
                     //项目地址
-                    siteUrl    : "https://github.com/dengyuhan/glide-support",
+                    siteUrl    : "https://github.com/dengyuhan/GlidePlus",
                     //项目git地址
-                    gitUrl     : "https://github.com/dengyuhan/glide-support.git",
+                    gitUrl     : "https://github.com/dengyuhan/GlidePlus.git",
                     //项目描述
-                    description: "基于Glide的一系列扩展，强化对GIF的支持",
+                    description: "Glide增强版，强化对GIF的支持",
                     //开发者的一些基本信息
                     authorId   : "dengyuhan",
                     authorName : "dengyuhan",
