--- a/example/build.gradle
+++ b/example/build.gradle
@@ -22,5 +22,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile project(':glide')
+    compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.6.0'
+    compile 'com.github.chrisbanes:PhotoView:2.0.0'
+    compile project(':glide-plus')
+    compile 'com.android.support:recyclerview-v7:25.3.1'
 }
